--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -22,7 +22,7 @@
         <% if @user.find(@post.userid).image.nil? %>
           <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
         <% else %>
-          <%= image_tag "/user_images/#{user.find(post.userid).image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
+          <%= image_tag "/user_images/#{@user.find(@post.userid).image}" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
         <% end %>
       <% end %>
 
