--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -130,6 +130,8 @@
       </div>
       <div class="col mt-3">
         <h5 class="mb-2">コンテンツ</h5>
+        <p class="mb-1 small"><%= link_to "通知", about_path, class: "text-decoration-none text-light" %></p>
+        <p class="mb-1 small"><%= link_to "ランキング", about_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "運営からのお知らせ", about_path, class: "text-decoration-none text-light" %></p>
       </div>
       <div class="col mt-3">
