--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,6 +1,11 @@
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
 
+<style>
+  .lity{
+      z-index: 10002;
+  }
+</style>
 <body class="bg-white">
   <div class="nav-scroller bg-white shadow-sm">
     <nav class="nav nav-underline" aria-label="Secondary navigation">
