--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,4 +1,5 @@
 @import '~@fortawesome/fontawesome-free/scss/fontawesome';
 @import "bootstrap";
 @import "~tag-it/css/jquery.tagit";
+@import "cropperjs/dist/cropper";
 @import "~lity/dist/lity.min";
