modalが表示された際、すべての要素が左に17pxズレるバグの修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -118,3 +118,11 @@ main {
 .bg-gray {
   background-color: #666666
 }
+
+.modal-open {
+  padding-right: 0 !important;
+}
+
+.modal {
+  padding-right: 0px !important;
+}
