communityのindexのpagenateの実装

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -20,7 +20,7 @@
 
 <%= form_with model: current_user, url: profile_path, method: :put, multipart: true do |f| %>
   <!-- Modal -->
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true" style="padding-right: 0">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
