--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -41,4 +41,6 @@
   <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-2  row-cols-xl-3 row-cols-xxl-4 g-4　g-lg-4　p-3　my-3" id="community">
     <%= render partial:'communities/community', collection: @community, as: :community %>
   </div>
+
+  <%= render "layouts/pagenate", pagenate:@community %>
 </div>
