--- a/app/views/communities/pickup.js.erb
+++ b/app/views/communities/pickup.js.erb
@@ -1,1 +1,1 @@
-alert("https://www.youtube.com/watch?v=h-VXRFE9Xnw")
+$("#community").empty().append("<%= j(render partial:'communities/community', collection: @community, as: :community) %>");
