--- a/app/views/comments/_hide_comments.html.erb
+++ b/app/views/comments/_hide_comments.html.erb
@@ -1,4 +1,4 @@
-<main class="container">
+<div class="container">
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <div class="d-flex text-muted">
       <%= link_to profile_path(@user.find(@post.userid).userid), style:"color:black" do %>
@@ -27,5 +27,5 @@
     </div>
   </div>
 
-</main>
+</div>
 <hr class="d-none">
