--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -13,7 +13,7 @@
     <div class="FlexTextarea__dummy" aria-hidden="true"></div>
     <%= f.text_area :comment, placeholder: "面白い投稿にコメントしてみよう！", maxlength: "280", id: "FlexTextarea", class: "FlexTextarea__textarea form-control" %>
     <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-      <%= button_tag class: 'send bg-white position-absolute bottom-0 end-0' do %>
+      <%= button_tag class: 'send bg-white position-absolute bottom-0 end-0', data: { disable_with: "投稿中..." } do %>
         <i class="far fa-paper-plane"></i>
       <% end %>
     </div>
