--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -2,63 +2,65 @@
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
 
 <style>
-  .lity{
-      z-index: 10002;
-  }
-  .send{
-      margin-right: 2px;
-      margin-bottom: 2px;
-      color: #0d6efd;
-      border:none;
-  }
+    .lity {
+        z-index: 10002;
+    }
+
+    .send {
+        margin-right: 2px;
+        margin-bottom: 2px;
+        color: #0d6efd;
+        border: none;
+    }
 </style>
 <body class="bg-white">
-  <div class="nav-scroller bg-white shadow-sm">
-    <nav class="nav nav-underline" aria-label="Secondary navigation">
-      <a class="nav-link active" aria-current="page" href="#">友達
-        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%=current_user.matchers.count %></span>
-      </a>
-      <a class="nav-link" href="#">
-        フォロー中
-        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%=current_user.followings_list.count %></span>
-      </a>
-      <a class="nav-link" href="#">最新</a>
-      <a class="nav-link" href="#">おすすめ</a>
-    </nav>
+<div class="nav-scroller bg-white shadow-sm">
+  <nav class="nav nav-underline" aria-label="Secondary navigation">
+    <a class="nav-link active" aria-current="page" href="#">友達
+      <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%= current_user.matchers.count %></span>
+    </a>
+    <a class="nav-link" href="#">
+      フォロー中
+      <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%= current_user.followings_list.count %></span>
+    </a>
+    <a class="nav-link" href="#">最新</a>
+    <a class="nav-link" href="#">おすすめ</a>
+  </nav>
+</div>
+
+
+<main class="container">
+  <div class="text-center">
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
   </div>
-
-  <p class="notice"><%= notice %></p>
-  <p class="alert"><%= alert %></p>
-
-  <main class="container">
+  <%= form_for(@create, url: timelines_path) do |f| %>
     <div class="align-items-center p-3 my-3 text-dark bg-white rounded shadow-sm">
-      <%= form_for(@create ,url:timelines_path) do |f|%>
-        <div class="FlexTextarea form-group mb-2">
-          <div class="FlexTextarea__dummy" aria-hidden="true"></div>
-          <%= f.text_area :content, placeholder:"今起こってることをみんなに共有しよう",maxlength:"280",id:"FlexTextarea",class: "FlexTextarea__textarea form-control" %>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <%= button_tag class: 'send bg-white position-absolute bottom-0 end-0' do %>
-              <i class="far fa-paper-plane"></i>
-            <% end %>
-          </div>
+      <div class="FlexTextarea form-group mb-2">
+        <div class="FlexTextarea__dummy" aria-hidden="true"></div>
+        <%= f.text_area :content, placeholder: "今起こってることをみんなに共有しよう", maxlength: "280", id: "FlexTextarea", class: "FlexTextarea__textarea form-control" %>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+          <%= button_tag class: 'send bg-white position-absolute bottom-0 end-0', data: { disable_with: "投稿中..." } do %>
+            <i class="far fa-paper-plane"></i>
+          <% end %>
         </div>
-        <div class="custom-file">
-          <%= f.label "画像" %>
-          <%= f.file_field :image, class: "form-control mb-3", style:"width:100%"%>
-        </div>
-      <% end %>
+      </div>
+      <div class="custom-file">
+        <%= f.label "画像" %>
+        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%" %>
+      </div>
     </div>
-
-      <% @posts.each do |p| %>
-        <%= link_to timeline_path(p.id) do%>
-          <div class="my-3 p-3 bg-white rounded shadow-sm">
-            <% unless current_user.following?(@user.find(p.userid)) == false %>
-              <div id="post_<%= p.id %>">
-               <%= render "timelines/post",post:p, user:@user %>
-              </div>
-            <% end %>
+  <% end %>
+  <% @posts.each do |p| %>
+    <%= link_to timeline_path(p.id) do %>
+      <div class="my-3 p-3 bg-white rounded shadow-sm">
+        <% unless current_user.following?(@user.find(p.userid)) == false %>
+          <div id="post_<%= p.id %>">
+            <%= render "timelines/post", post: p, user: @user %>
           </div>
         <% end %>
-      <% end %>
-  </main>
+      </div>
+    <% end %>
+  <% end %>
+</main>
 </body>
