--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -41,12 +41,12 @@
     <div style="margin-left: 50px">
       <span class="likes">
         <% if current_user.liked_by?(post.id) %>
-          <%= link_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true do %>
+          <%= link_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, :disabled => true do %>
             <i class="fas fa-heart"></i>
           <% end %>
           <%= post.likes.count %>
         <% else %>
-          <%= link_to timeline_likes_path(post.id), method: :post, remote: true do %>
+          <%= link_to timeline_likes_path(post.id), method: :post, remote: true, :disabled => true do %>
             <i class="far fa-heart"></i>
           <% end %>
           <%= post.likes.count %>
