--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -8,6 +8,13 @@
         top: 0;
         z-index: 10000;
     }
+
+    .send {
+        margin-right: 2px;
+        margin-bottom: 2px;
+        color: #0d6efd;
+        border: none;
+    }
 </style>
 <div class="panel-content panel-activity">
   <div class="d-flex text-muted">
@@ -32,34 +39,33 @@
   </div>
   <div class="d-flex justify-content-between" style="margin-left: 50px">
     <% if post.image? %>
-      <%= image_tag post.image.url, style: "width: 200px; height: 200px;" , "data-lity" => "data-lity"%>
+      <%= image_tag post.image.url, style: "width: 200px; height: 200px;", "data-lity" => "data-lity" %>
     <% end %>
   </div>
 
-  <div class="d-flex justify-content-between">
-
-    <div style="margin-left: 50px">
+  <div class="d-flex justify-content-between" style="margin-left: 45px">
+    <div class="d-flex flex-row">
       <span class="likes">
         <% if current_user.liked_by?(post.id) %>
-          <%= link_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, :disabled => true do %>
+          <%= button_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='fas fa-heart'></i>" } do %>
             <i class="fas fa-heart"></i>
           <% end %>
-          <%= post.likes.count %>
         <% else %>
-          <%= link_to timeline_likes_path(post.id), method: :post, remote: true, :disabled => true do %>
+          <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='far fa-heart'></i>" } do %>
             <i class="far fa-heart"></i>
           <% end %>
-          <%= post.likes.count %>
         <% end %>
       </span>
-      <span class="comments">
-        <%= link_to timeline_path(post.id) do %>
-          <i class="far fa-comment-alt" style="height: 15.5px"></i>
-        <% end %>
-        <%= post.comments.count %>
+      <span>
+        <%= post.likes.count %>
+        <span class="comments">
+          <%= link_to timeline_path(post.id) do %>
+            <i class="far fa-comment-alt" style="height: 15.5px"></i>
+          <% end %>
+          <%= post.comments.count %>
+        </span>
       </span>
     </div>
-
     <div>
       <% if post.userid == current_user.id %>
         <%= link_to(timeline_path(post.id), method: :delete) do %>
