--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -68,7 +68,7 @@
     </div>
     <div>
       <% if post.userid == current_user.id %>
-        <%= link_to(timeline_path(post.id), method: :delete) do %>
+        <%= link_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
           <i class="far fa-trash-alt"></i>
         <% end %>
       <% end %>
