--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -1,32 +1,19 @@
 <%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
 <%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
-<body class="bg-light">
-  <div class="nav-scroller bg-white shadow-sm">
-    <nav class="nav nav-underline" aria-label="Secondary navigation">
-      <a class="nav-link active" aria-current="page" href="#">友達
-        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%= current_user.matchers.count %></span>
-      </a>
-      <a class="nav-link" href="#">
-        フォロー中
-        <span class="badge bg-light text-dark rounded-pill align-text-bottom"><%= current_user.followings_list.count %></span>
-      </a>
-      <a class="nav-link" href="#">最新</a>
-      <a class="nav-link" href="#">おすすめ</a>
-    </nav>
-  </div>
 
-  <main class="container">
-    <div class="my-5 p-3 bg-white rounded shadow-sm ">
-      <%= render "timelines/post", post:@post, user:@user %>
-      <div class="mt-3 p-3 bg-white ">
-        <%= render 'comments/form', post: @post, comment: @comment %>
-      </div>
+<%= render 'timelines/nav' %>
+
+<div class="container light">
+  <div class="my-5 p-3 bg-white rounded shadow-sm ">
+    <%= render "timelines/post", post: @post, user: @user %>
+    <div class="mt-3 p-3 bg-white ">
+      <%= render 'comments/form', post: @post, comment: @comment %>
     </div>
-    <div id="comments_area">
-      <%= render 'comments/index', comments: @comments, post: @post, user: @user %>
-    </div>
-    <%= render "layouts/pagenate", pagenate: @comments %>
-  </main>
-</body>
+  </div>
+  <div id="comments_area">
+    <%= render 'comments/index', comments: @comments, post: @post, user: @user %>
+  </div>
+  <%= render "layouts/pagenate", pagenate: @comments %>
+</div>
 
 
