--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -15,6 +15,11 @@
         color: #0d6efd;
         border: none;
     }
+    .im{
+        width: 200px;
+        height: 200px;
+        object-fit: cover;
+    }
 </style>
 <div class="panel-content panel-activity">
   <div class="d-flex text-muted">
@@ -37,10 +42,12 @@
       <br/>
     </p>
   </div>
-  <div class="d-flex justify-content-between" style="margin-left: 50px">
+  <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
+
     <% if post.image? %>
-      <%= image_tag post.image.url, style: "width: 200px; height: 200px;", "data-lity" => "data-lity" %>
+      <%= image_tag post.image.url, "data-lity" => "data-lity",class:"im" %>
     <% end %>
+
   </div>
 
   <div class="d-flex justify-content-between" style="margin-left: 45px">
@@ -61,8 +68,9 @@
         <span class="comments">
           <%= link_to timeline_path(post.id) do %>
             <i class="far fa-comment-alt" style="height: 15.5px"></i>
+            <span class="text-dark"><%= post.comments.count %></span>
           <% end %>
-          <%= post.comments.count %>
+
         </span>
       </span>
     </div>
