file_fieldに拡張子制限を追加

--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -35,7 +35,7 @@
       </div>
       <div class="custom-file">
         <%= f.label "画像" %>
-        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%" %>
+        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%",accept: 'image/jpg,image/jpeg,image/png,image/gif' %>
       </div>
     </div>
   <% end %>
