--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -23,18 +23,18 @@
 </style>
 <div class="panel-content panel-activity">
   <div class="d-flex text-muted">
-    <%= link_to profile_path(user.find(post.userid).userid), style: "color:black" do %>
-      <% if user.find(post.userid).image.nil? %>
+    <%= link_to profile_path(user.find(post.user_id).userid), style: "color:black" do %>
+      <% if user.find(post.user_id).image.nil? %>
         <%= image_tag "/user_images/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
       <% else %>
-        <%= image_tag "/user_images/#{user.find(post.userid).image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
+        <%= image_tag "/user_images/#{user.find(post.user_id).image}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded", width: "40px", height: "40px" %>
       <% end %>
     <% end %>
 
 
     <p class="pb-3 mb-0 lh-sm w-100">
-      <strong class="text-dark" style="font-size:20px;margin: 0"><%= user.find(post.userid).nickname %></strong>
-      <span class="text-gray small" style="margin: 0">@<%= user.find(post.userid).userid %></span>
+      <strong class="text-dark" style="font-size:20px;margin: 0"><%= user.find(post.user_id).nickname %></strong>
+      <span class="text-gray small" style="margin: 0">@<%= user.find(post.user_id).userid %></span>
       <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
       <br/>
       <br/>
@@ -43,11 +43,9 @@
     </p>
   </div>
   <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
-
     <% if post.image? %>
       <%= image_tag post.image.url, "data-lity" => "data-lity",class:"im" %>
     <% end %>
-
   </div>
 
   <div class="d-flex justify-content-between" style="margin-left: 45px">
@@ -70,12 +68,11 @@
             <i class="far fa-comment-alt" style="height: 15.5px"></i>
             <span class="text-dark"><%= post.comments.count %></span>
           <% end %>
-
         </span>
       </span>
     </div>
     <div>
-      <% if post.userid == current_user.id %>
+      <% if post.user_id == current_user.id %>
         <%= button_to(timeline_path(post.id), class: "send bg-white", method: :delete, data: { disable_with: "削除中..." }) do %>
           <i class="far fa-trash-alt"></i>
         <% end %>
