--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -20,7 +20,9 @@
 <main class="container">
   <div class="text-center">
     <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if flash[:alert] %>
+      <p class="notice"><%= flash[:alert].html_safe %></p>
+    <% end %>
   </div>
   <%= form_for(@create, url: timelines_path) do |f| %>
     <div class="align-items-center p-3 my-3 text-dark bg-white rounded shadow-sm">
@@ -35,14 +37,14 @@
       </div>
       <div class="custom-file">
         <%= f.label "画像" %>
-        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%",accept: 'image/jpg,image/jpeg,image/png,image/gif' %>
+        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%", accept: 'image/jpg,image/jpeg,image/png,image/gif' %>
       </div>
     </div>
   <% end %>
   <% @posts.each do |p| %>
     <%= link_to timeline_path(p.id) do %>
       <div class="my-3 p-3 bg-white rounded shadow-sm">
-        <% unless current_user.following?(@user.find(p.userid)) == false %>
+        <% unless current_user.following?(@user.find(p.user_id)) == false %>
           <div id="post_<%= p.id %>">
             <%= render "timelines/post", post: p, user: @user %>
           </div>
