ユーザ検索とコミュニティ検索完成

--- a/app/views/communities/index.html.erb
+++ b/app/views/communities/index.html.erb
@@ -22,7 +22,7 @@
 <div class="container">
   <div class="p-3 my-3 text-dark bg-blue rounded shadow-sm">
     <div class="lh-1">
-      <%= form_with url: profile_search_path,:method => 'get',class: "container-fluid" do |f| %>
+      <%= form_with url: search_community_path,class: "container-fluid" do |f| %>
         <div class="input-group">
           <div class="d-flex flex-column w-100">
             <div class="p-2 bd-highlight">
