--- a/app/views/timelines/show.html.erb
+++ b/app/views/timelines/show.html.erb
@@ -5,13 +5,13 @@
 
 <div class="container light">
   <div class="my-5 p-3 bg-white rounded shadow-sm ">
-    <%= render "timelines/post", post: @post, user: @user %>
+    <%= render "timelines/post", post: @post, post_model: @post_m%>
     <div class="mt-3 p-3 bg-white ">
       <%= render 'comments/form', post: @post, comment: @comment %>
     </div>
   </div>
   <div id="comments_area">
-    <%= render 'comments/index', comments: @comments, post: @post, user: @user %>
+    <%= render 'comments/index', post: @post %>
   </div>
   <%= render "layouts/pagenate", pagenate: @comments %>
 </div>
