--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -1,5 +1,5 @@
-<%= stylesheet_link_tag 'timelines', media: 'all', 'data-turbolinks-track': 'reload' %>
-<%= javascript_pack_tag 'timeline/main', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag 'timelines' %>
+<%= javascript_pack_tag 'timeline/main'%>
 
 <style>
     .lity {
