--- a/app/views/searches/community.html.erb
+++ b/app/views/searches/community.html.erb
@@ -3,10 +3,10 @@
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <h6 class="border-bottom pb-2 mb-0">コミュニティリスト (<%= @communities.count %>)</h6>
     <% @communities.each do |community| %>
-      <%= link_to profile_path(community.name),style:"text-decoration: none;" do %>
+      <%= link_to community_path(community.id),style:"text-decoration: none;" do %>
         <div class="d-flex text-muted pt-3">
           <% if community.image.nil? %>
-            <%= image_tag "/community_icon/default_icon.png", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
+            <%= image_tag "/communities_image/#{community.icon}", class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px" %>
           <% else %>
             <%= image_tag "/community_icon/#{community.icon}.png" , class: "icon bd-placeholder-img flex-shrink-0 me-2 rounded",width: "40px",height: "40px"%>
           <% end %>
