--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -16,30 +16,8 @@
 <%= render 'timelines/nav' %>
 
 
-<main class="container">
-  <div class="text-center">
-    <p class="notice"><%= notice %></p>
-    <% if flash[:alert] %>
-      <p class="notice"><%= flash[:alert].html_safe %></p>
-    <% end %>
-  </div>
-  <%= form_for(@create, url: timelines_path) do |f| %>
-    <div class="align-items-center p-3 my-3 text-dark bg-white rounded shadow-sm">
-      <div class="FlexTextarea form-group mb-2">
-        <div class="FlexTextarea__dummy" aria-hidden="true"></div>
-        <%= f.text_area :content, placeholder: "今起こってることをみんなに共有しよう", maxlength: "280", id: "FlexTextarea", class: "FlexTextarea__textarea form-control" %>
-        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-          <%= button_tag class: 'send bg-white position-absolute bottom-0 end-0', data: { disable_with: "投稿中..." } do %>
-            <i class="far fa-paper-plane"></i>
-          <% end %>
-        </div>
-      </div>
-      <div class="custom-file">
-        <%= f.label "画像" %>
-        <%= f.file_field :image, class: "form-control mb-3", style: "width:100%", accept: 'image/jpg,image/jpeg,image/png,image/gif' %>
-      </div>
-    </div>
-  <% end %>
+<div class="container">
+  <%= render "timelines/form", create:@create %>
   <% @posts.each do |p| %>
     <% if following?(@user.followings_list,p.user) || @user == current_user %>
       <%= link_to timeline_path(p.id) do %>
@@ -51,6 +29,5 @@
       <% end %>
     <% end %>
   <% end %>
-
   <%= render "layouts/pagenate", pagenate: @posts %>
-</main>
+</div>
