--- a/app/views/timelines/follow.html.erb
+++ b/app/views/timelines/follow.html.erb
@@ -13,9 +13,7 @@
         border: none;
     }
 </style>
-<%= render 'timelines/nav' %>
-
-
+<%= render 'timelines/nav', page:"follow" %>
 <div class="container">
   <%= render "timelines/form", create:@create %>
   <% @posts.each do |p| %>
