--- a/app/views/timelines/pickup.html.erb
+++ b/app/views/timelines/pickup.html.erb
@@ -13,7 +13,7 @@
         border: none;
     }
 </style>
-<%= render 'timelines/nav' %>
+<%= render 'timelines/nav', page:"pickup" %>
 
 
 <div class="container">
