--- a/app/views/timelines/latest.html.erb
+++ b/app/views/timelines/latest.html.erb
@@ -13,7 +13,7 @@
         border: none;
     }
 </style>
-<%= render 'timelines/nav' %>
+<%= render 'timelines/nav', page:"latest" %>
 
 
 <div class="container">
