--- a/app/views/timelines/index.html.erb
+++ b/app/views/timelines/index.html.erb
@@ -19,7 +19,7 @@
 <div class="container">
   <%= render "timelines/form", create:@create %>
   <% @posts.each do |p| %>
-    <% if matchers?(@user,p.user) || @user == current_user %>
+    <% if matchers?(@user,p.user) || p.user == current_user %>
       <%= link_to timeline_path(p.id) do %>
         <div class="my-3 p-3 bg-white rounded shadow-sm">
           <div id="post_<%= p.id %>">
