--- a/app/views/timelines/follow.html.erb
+++ b/app/views/timelines/follow.html.erb
@@ -17,7 +17,7 @@
 <div class="container">
   <%= render "timelines/form", create:@create %>
   <% @posts.each do |p| %>
-    <% if following?(@user.followings_list,p.user) || @user == current_user %>
+    <% if following?(@user.followings_list,p.user) || p.user == current_user %>
       <%= link_to timeline_path(p.id) do %>
         <div class="my-3 p-3 bg-white rounded shadow-sm">
           <div id="post_<%= p.id %>">
