--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -1,4 +1,4 @@
-<%= javascript_pack_tag 'timeline/main'%>
+<%= javascript_pack_tag 'timeline/main' %>
 <style>
     #back {
         display: none;
@@ -15,10 +15,15 @@
         color: #0d6efd;
         border: none;
     }
-    .im{
+
+    .im {
         width: 200px;
         height: 200px;
         object-fit: cover;
+    }
+
+    .red {
+        color: deepskyblue;
     }
 </style>
 <div class="panel-content panel-activity">
@@ -32,7 +37,7 @@
     <% end %>
     <p class="pb-3 mb-0 lh-sm w-100">
       <strong class="text-dark" style="font-size:20px;margin: 0"><%= post.user.nickname %></strong>
-      <span class="text-gray small" style="margin: 0">@<%=  post.user.userid %></span>
+      <span class="text-gray small" style="margin: 0">@<%= post.user.userid %></span>
       <span class="text-gray small"><i class="far fa-clock clock-icon"></i><%= time_ago_in_words(post.created_at) %></span>
       <br/>
       <br/>
@@ -42,7 +47,7 @@
   </div>
   <div class="d-flex pb-3  justify-content-between" style="margin-left: 50px">
     <% if post.image? %>
-      <%= image_tag post.image.url, "data-lity" => "data-lity",class:"im" %>
+      <%= image_tag post.image.url, "data-lity" => "data-lity", class: "im" %>
     <% end %>
   </div>
   <div class="d-flex justify-content-between" style="margin-left: 45px">
@@ -53,7 +58,18 @@
             <i class="fas fa-heart"></i>
           <% end %>
         <% else %>
-          <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='far fa-heart'></i>" } do %>
+          <% case rand(1..65536) %>
+            <% when 1 then icon = '<i class="fas fa-hand-holding-heart"></i>'#1/65536 %>
+            <% when 2..6 then icon = '<i class="fas fa-laugh-wink"></i>'#1/16384 %>
+            <% when 11..19 then icon = '<i class="fab fa-yarn"></i>'#1/8192 %>
+            <% when 20..28 then icon = '<i class="fab fa-node-js"></i>'#1/8192 %>
+            <% when 29..37 then icon = '<i class="fab fa-yarn"></i>'#1/8192 %>
+            <% when 38..103 then icon = '<i class="fas fa-rocket"></i>' #1/1000 %>
+            <% when 1000..1261 then icon = '<i class="fas fa-mug-hot"></i>' #1/250 %>
+            <% when 2000..2654 then icon = '<i class="fas fa-heartbeat"></i>' #1/100%>
+            <% else icon = '<i class="fas fa-heart"></i>' %>
+          <% end %>
+          <%= button_to timeline_likes_path(post.id), method: :post, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: icon } do %>
             <i class="far fa-heart"></i>
           <% end %>
         <% end %>
