profileのshowのフッターがバグり散らかしてたのを修正

--- a/app/assets/stylesheets/profiles_show.scss
+++ b/app/assets/stylesheets/profiles_show.scss
@@ -2,7 +2,7 @@
 /*====== siderbar user profile =====*/
 /*==============================*/
 
-.container{
+.main{
   font-family: 'Roboto', sans-serif;
   font-weight: 400;
   background-color: #FFFFFF;
