--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -1,5 +1,5 @@
 <%# views/messages/_chat_message.html.erb %>
 <div class="message">
-  <p>send_userid:<%= chat_message.send_userid %></p>
-    <p>content:<%= chat_message.content %></p>
+  <p>send_userid:<%= message.send_userid %></p>
+    <p>content:<%= message.content %></p>
 </div>
