--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -136,7 +136,9 @@
       </div>
       <div class="col mt-3">
         <h5 class="mb-2">アカウント</h5>
-        <p class="mb-1 small"><%= link_to "プロフィール設定", edit_profile_path(current_user.userid), class: "text-decoration-none text-light" %></p>
+        <% if current_user %>
+          <p class="mb-1 small"><%= link_to "プロフィール設定", edit_profile_path(current_user.userid), class: "text-decoration-none text-light" %></p>
+        <% end %>
         <p class="mb-1 small"><%= link_to "アカウント設定", edit_user_registration_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "ログアウト", destroy_user_session_path, class: "text-decoration-none text-light" %></p>
       </div>
