--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -10,5 +10,8 @@
 
 <form>
   <label>Say something:</label><br>
-  <input type="text" data-behavior="room_speaker">
+  <input type="text" data-behavior="chat_speaker">
+  <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+    <button type="submit" class="btn btn-primary">投稿</button>
+  </div>
 </form>
