チャット君実装途中

--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -1,6 +1,6 @@
 <%# views/messages/_chat_message.html.erb %>
 <div class="message">
   <p>room_number:<%= message.room_id %></p>
-  <p>send_userid:<%= message.send_userid %></p>
+  <p>send_userid:<%= message.user_id %></p>
     <p>content:<%= message.content %></p>
 </div>
