--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,13 +1,16 @@
+<%= hidden_field_tag :room_id, @room_id ,id: "room_id" %>
 
 <h1>Chat room</h1>
 <% @message.each do |p| %>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
     <div id="messages">
-      <%= render 'chats/chat_message',message:p, user:@user  %>
+      <%= render 'chats/chat_message',message:p, user:@user %>
     </div>
   </div>
 <% end %>
 
+
 <%= label_tag :content, 'Say something:' %>
+<input type="hidden" id="room_id" value= <%= @room_id %> data-behavior="chat_speaker">
 <%= text_field_tag :content, nil,data: {behavior: "chat_speaker"} %>
 
