チャット君実装途中

--- a/app/views/chats/_chat_message.html.erb
+++ b/app/views/chats/_chat_message.html.erb
@@ -1,5 +1,5 @@
 <%# views/messages/_chat_message.html.erb %>
 <div class="message">
-  <p>send_username:<%= user.name %></p>
+  <p>send_username:<%= message.user_id %></p>
     <p>content:<%= message.content %></p>
 </div>
