--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,12 +1,11 @@
-<%= hidden_field_tag :room_id, @room_id ,id: "room_id" %>
+
 
 <h1>Chat room</h1>
 <p>room_number:<%= @room_id %></p>
+<div id="messages"></div>
 <% @message.each do |p| %>
   <div class="my-3 p-3 bg-white rounded shadow-sm">
-    <div id="messages">
-      <%= render 'chats/chat_message',message:p, user:@user %>
-    </div>
+      <%= render 'chats/chat_message',message:p %>
   </div>
 <% end %>
 
