--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -125,7 +125,7 @@
         <p class="mb-1 small"><%= link_to "About", about_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "利用規約", static_path, class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "プライバシーポリシー", privacy_path, class: "text-decoration-none text-light" %></p>
-        <p class="mb-1 small"><%= link_to "お問い合わせ", contact_path, class: "text-decoration-none text-light" %></p>
+        <p class="mb-1 small"><%= link_to "Q&A", page_path(current_user.nickname), class: "text-decoration-none text-light" %></p>
         <p class="mb-1 small"><%= link_to "ヘルプ", about_path, class: "text-decoration-none text-light" %></p>
       </div>
       <div class="col mt-3">
