--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -21,6 +21,10 @@
         height: 200px;
         object-fit: cover;
     }
+
+    .red{
+        color: red;
+    }
 </style>
 <div class="panel-content panel-activity">
   <div class="d-flex text-muted">
@@ -56,7 +60,7 @@
         <% else %>
           <% case rand(1..65536) %>
             <% when 1 then
-                 icon = '<i class="fas fa-hand-holding-heart"></i>'
+                 icon = '<i class="fas fa-hand-holding-heart red"></i>'
                  current_user.achievement.change_rare_like #1/65536 %>
             <% when 2..6 then icon = '<i class="fas fa-laugh-wink"></i>'#1/16384 %>
             <% when 11..19 then icon = '<i class="fab fa-yarn"></i>'#1/8192 %>
