--- a/app/views/timelines/_post.html.erb
+++ b/app/views/timelines/_post.html.erb
@@ -53,7 +53,7 @@
   <div class="d-flex justify-content-between" style="margin-left: 45px">
     <div class="d-flex flex-row">
       <span class="likes">
-        <% if current_user.liked_by?(post) %>
+        <% if current_user.liked_by?(post.id) %>
           <%= button_to timeline_like_path(post.id, current_user.id), method: :delete, remote: true, class: "send bg-white", style: "height: 15.5px;padding: 0", data: { disable_with: "<i class='fas fa-heart'></i>" } do %>
             <i class="fas fa-heart"></i>
           <% end %>
